# Sketch_Mentor__Techiee_Hackers_Sankalp_Hackathon

./: README.md
Backend/: backend.py  pyproject.toml
Backend/canvasbackend/: app.py  constants.py  schema.py
Backend/canvasbackend/apps/calculator/: route.py  utils.py
Backend/data/: single.json
Backend/document_analyzer/: backend.py  chatbot.py  flash_card_generator.py  gemini_call.py  goal_todo_features.py  pyproject.toml  quiz_generator.py  speech_to_text.py  summary_generator.py  video_search.py
Backend/document_analyzer/database/: 2Dypv.json  3GhVE.json  3rmNV.json  3sz3m.json  3tnu3.json  CjxKQ.json  Er9ye.json  FyoRO.json  GbKoZ.json  KhXVA.json  LYG4p.json  OYMIE.json  Z7Pgw.json  bUw7n.json  kSDJ4.json  lTFey.json  m6xBP.json  uckoW.json  wbg0C.json  yb7aS.json  zIcPM.json
Backend/model/: chatbot.py  conversation.py  rag.py  video_to_transcribe.py
Backend/model/data/: single.json
Backend/video/: basic_api.py  checker.py  main.py  manim.py  manim_generator.py  preprocessor.py  render.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.tsx
Frontend/src/components/: Navigation.tsx  ProtectedRoute.tsx  SettingsPopup.tsx  Sidebar.tsx  TutorialPopup.tsx  UserActivities.tsx
Frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
Frontend/src/hooks/: useUserActivities.ts
Frontend/src/integrations/supabase/: client.ts  types.ts
Frontend/src/lib/: firebase.ts
Frontend/src/pages/: CanvasAI.tsx  Dashboard.tsx  DocumentAnalyzer.tsx  Documentation.tsx  Features.tsx  GraphVisualizer.tsx  Index.tsx  Integrations.tsx  Landing.tsx  Pricing.tsx  Settings.tsx  SignIn.tsx  SignUp.tsx  VideoGenerator.tsx  YouTubeTranscriber.tsx
Frontend/supabase/migrations/: 20250614125540-a94e91cf-ab22-4291-9f42-8cdefd67579c.sql  20250614133301-bf750aa7-8268-4d90-a6fd-fa834c628304.sql
